# chirami

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml
src/: FolderScanner.cpp  FolderScanner.h  ImageCache.h  ImageLoader.cpp  ImageLoader.h  ImageSaver.cpp  ImageSaver.h  ImageTransform.cpp  ImageTransform.h  LoadedImage.h  MainWindow.cpp  MainWindow.h  RCa37500  ResizeDialog.h  SelectionState.h  Settings.cpp  Settings.h  TurboJpeg.cpp  TurboJpeg.h  chirami.manifest  chirami.rc  framework.h  main.cpp  resource.h
